--- a/src/app/request-callback/request-callback.html
+++ b/src/app/request-callback/request-callback.html
@@ -7,12 +7,26 @@
     <form id="form-callme" method="post">
       <div class="form-group">
         <div class="input-group">
-          <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+          <span class="input-group-addon user-icon"><span class="glyphicon glyphicon-user"></span></span>
           <select name="cbt" id="cbt" class="form-control">
             <option value="1">Call Me Now</option>
             <option value="2">Call Me In 5 Mins</option>
             <option value="3">Call Me When Agent is Available</option>
           </select>
+          <!-- <div class="btn-group req-btn-group">
+          <div>
+            <div class="btn-group fullwidth" uib-dropdown is-open="status.isopen">
+            <button id="single-button" type="button" class="btn btn-mini nopadding prof-btn fullwidth" uib-dropdown-toggle ng-disabled="disabled">
+            <span class="caret"></span>
+            </button>
+            <ul class="uib-dropdown-menu sort-by-dropdown" role="menu" aria-labelledby="single-button">
+            <li role="menuitem" value="1">Call Me Now</li>
+            <li role="menuitem" value="2">Call Me In 5 Mins</li>
+            <li role="menuitem" value="3">Call Me When Agent is Available</li>
+            </ul>
+            </div>
+          </div>
+        </div> -->
         </div>
       </div>
       <div class="form-group">
