--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -446,7 +446,7 @@ a:focus { color: #0099cc;
 
 
 /******************reserve-success***********************/
-.req_job_tit{font-family: 'Open Sans', sans-serif; font-weight: 500; font-size: 18px; color: #666666; line-height: 42px;}
+.req_job_tit{font-family: 'Open Sans', sans-serif; font-weight: 500; font-size: 16px; color: #666666;}
 .print_btn{background: #009ddc; color: #fff; font-family: 'Open Sans', sans-serif; font-weight: 500; font-size: 14px;}
 .theme_clr{font-size: 18px; color: #009ddc;}
 .req_mar{margin: 10px 0 0 0;}
@@ -468,6 +468,9 @@ a:focus { color: #0099cc;
 .order_tit_list{font-family: 'Open Sans', sans-serif; font-weight: 500; color: #666666; font-size: 18px;}
 .order_tit_pump{color: #666666; font-size: 18px;}
 .order_tit_rent{color: #009ddc; font-size: 18px;}
+.order-his-hr{
+  margin: 5px 0;
+}
 /*.collapsing{width: 100%;}*/
 .total_order_d{float: right; margin: -8px 0 0 0;}
 .down_arrow_accordian{margin: 0 0 0 30px; color: #009ddc;}
@@ -1255,6 +1258,10 @@ button:hover {
   outline: none !important; 
 }
 
+.prof-btn:focus {
+  color: #009ddc;
+}
+
 .help-heading-col {
   padding-top: 23px;
 }
@@ -1613,6 +1620,111 @@ button:hover {
   padding-top: 82px;
 }
 
+.user-icon {
+  padding: 6px 14px;
+}
+
+.req-btn-group {
+  width: 100%;
+  text-align: right;
+  padding: 5px 0px;
+  display: block;
+  font-size: 13px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.req-btn-group .prof-btn {
+  text-align: right;
+  background-color: transparent;
+}
+
+.req-btn-group .caret {
+  margin-right: 12px;
+}
+
+.req-btn-group .dropdown-menu {
+  float: none;
+  width: 100%;
+  margin: 6px 0 0;
+}
+
+.req-btn-group .dropdown-menu li {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: 400;
+  line-height: 1.42857143;
+  color: #333;
+  white-space: nowrap;
+}
+
+.desc-text {
+  font-size: 13px;
+}
+
+.heading-text {
+  font-size: 16px;
+}
+
+.panel-group .panel-row {
+  border-bottom: 1px solid #ddd;
+  border-color: #ddd;
+  border-radius: 0;
+  margin-bottom: 8px;
+}
+
+.order-history-panel button {
+  width: auto;
+  margin-bottom: 10px;
+}
+
+.order-history-panel .order_bot {
+  margin: 10px 0 18px 0;
+}
+
+.order-history-acc .panel-group {
+  margin: 0 0 10px 0;
+}
+
+.panel-right {
+  padding: 15px 15px;
+}
+
+.panel-left {
+  padding: 10px 15px;
+}
+
+.order-hr {
+  margin: 10px 0;
+}
+
+.autowidth {
+  width: auto;
+}
+
+/*.order-history-acc .panel-heading {
+  background-color: #f5f5f5;
+}*/
+
+.leftpadding {
+  padding-left: 0;
+}
+
+.rightpadding {
+  padding-right: 0;
+}
 
 
 
