--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -33,7 +33,7 @@
             </li> -->
           </ul>
         </div>
-        <!-- <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
+        <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
           <button class="btn btn-mini my-alc-btn nopadding prof-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
           <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn" id="single-button" dropdown-toggle>
             <span class="caret"></span>
@@ -43,8 +43,8 @@
             <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/portal-access" ng-if="!userObj.portal_login">Get Portal Access</a></li>
             <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/logout">Logout</a></li>
           </ul>
-        </div> -->
-        <div class="btn-group drop-btn user-div" ng-if="userObj">
+        </div>
+        <!-- <div class="btn-group drop-btn user-div" ng-if="userObj">
           <div>
             <div class="btn-group" uib-dropdown is-open="status.isopen">
             <button id="single-button" type="button" class="btn btn-mini my-alc-btn nopadding prof-btn" uib-dropdown-toggle ng-disabled="disabled">
@@ -58,7 +58,7 @@
             </ul>
             </div>
           </div>
-        </div>
+        </div> -->
         <div ng-if="!userObj" class="not-user-div">
           <a href="#/login" class="help-link">Login</a>
           <a href="#/register" class="help-link">Register</a>
@@ -97,7 +97,7 @@
             </li> -->
           </ul>
         </div>
-        <!-- <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
+        <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
           <button class="btn btn-mini my-alc-btn nopadding prof-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
           <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn" id="single-button" dropdown-toggle>
             <span class="caret"></span>
@@ -107,8 +107,8 @@
             <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/portal-access" ng-if="!userObj.portal_login">Get Portal Access</a></li>
             <li role="presentation"><a role="menuitem" tabindex="-1" href="/#/logout">Logout</a></li>
           </ul>
-        </div> -->
-        <div class="btn-group drop-btn user-div" ng-if="userObj">
+        </div>
+        <!-- <div class="btn-group drop-btn user-div" ng-if="userObj">
           <div>
             <div class="btn-group" uib-dropdown is-open="status.isopen">
             <button id="single-button" type="button" class="btn btn-mini my-alc-btn nopadding prof-btn" uib-dropdown-toggle ng-disabled="disabled">
@@ -122,7 +122,7 @@
             </ul>
             </div>
           </div>
-        </div>
+        </div> -->
         <div ng-if="!userObj" class="not-user-div">
           <a href="#/login" class="help-link">Login</a>
           <a href="#/register" class="help-link">Register</a>
