--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -13,7 +13,7 @@
             <div class="panel-heading row nomargin">
               <h4 class="panel-title order_panel">
 
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapses" ng-click="toggleAccordian(order)" aria-expanded="true" class="on-hover-pointer">
+                <a data-toggle="collapse" data-parent="#accordion" ng-click="toggleAccordian(order)" aria-expanded="true" class="on-hover-pointer">
                   <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 panel-left">
                     <span class="order_tit_list heading-text">{{order.orderNo}}</span>| <span class="order_tit_pump heading-text">{{order.title}}</span>|
                     <span class="order_tit_rent heading-text">Rented for {{order.RentedForDays}} Days</span>
@@ -25,7 +25,7 @@
 
               </h4>
             </div>
-            <div id="collapses" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 panel-collapse collapse order-history-collapse" ng-class="{'in': order.toggleOpened}" aria-expanded="true">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 panel-collapse collapse order-history-collapse" ng-class="{'in': order.toggleOpened}" aria-expanded="true">
               <div class="panel-body order-history-panel nopadding">
                 <div class="col-lg-11 col-md-11 col-sm-8 col-xs-8 nopadding">{{order.orderNo}}</div>
                 <div class="col-lg-1 col-md-1 col-sm-4 col-xs-4 text-right">
