hide sort by button

--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -13,7 +13,7 @@
   <div>
     <!-- START  Equipment Product Display -->
     <div id="equpment" class="tab-pane fade in active">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display" >
+      <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display" >
         <div class="col-lg-10 col-md-10 col-xs-8 dis_tex"><span >Displaying {{results.length}} Equipments matching ‘{{query}}’</span></div>
         <div class="col-lg-2 col-md-2 col-xs-4 text-right link_clr">
           <div class="btn-group drop-btn">
@@ -30,11 +30,8 @@
             </div>
             </div>
           </div>
-
-          <!--                                    Sort By
-                                              <span class="short">  <i class="fa fa-sort-desc fa-2x"></i></span>-->
         </div>
-      </div>
+      </div> -->
 
 
 
