--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -8,7 +8,7 @@
         <hr class="order-hr">
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_job_tit order-history-acc">
-        <div class="panel-group row" id="accordion">
+        <!-- <div class="panel-group row" id="accordion">
           <div class="row panel panel-default my-order-panal rightmargin leftmargin panel-row" ng-repeat="order in orders">
             <div class="panel-heading row nomargin">
               <h4 class="panel-title order_panel">
@@ -46,7 +46,33 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
+        <uib-accordion close-others="oneAtATime">
+          <uib-accordion-group ng-repeat="order in orders" class="order-history-accordion">
+            <uib-accordion-heading>
+              <p>
+                {{order.orderNo}} | {{order.title}} | Rented for {{order.RentedForDays}} Days 
+                <span class="total_order_d desc-text">Order Total: ${{order.totalAmount}}<i class="fa fa-angle-down fa-2x down_arrow_accordian heading-text"></i></span>
+              </p>
+
+            </uib-accordion-heading>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding order-no">
+              <p>{{order.orderNo}}</p>
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 order_img">
+                  <img src="assets/images/order-history.jpg" alt="">
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 order_text">
+                  <h3 class="gas_title heading-text">{{order.title}}</h3>
+                  <h4 class="rent_title desc-text">Rented for {{order.RentedForDays}} Days</h4>
+                  <h5 class="order_his_title desc-text">Order Total: ${{order.totalAmount}}</h5>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 treack_main_order">
+                  <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Track Order</button>
+                  <button type="button" class="btn print_btn all-btn primary-btn sign_mybtn autowidth">Write a Review for Order</button>
+                </div>
+          </uib-accordion-group>
+        </uib-accordion>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 sell-main-part">
 
