--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -41,17 +41,69 @@
 
 		        </div>
 		        <!-- End  Dashboard tab -->
-				<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding">
-				  <div class="tab-content">
-				    <!-- START  Dashboard Content -->
-				    <div id="dash" class="tab-pane fade in active">
+				<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
 
-				      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 my-bottm-line manage_job_tit">
-				        Quota and Reservations
-				      </div>
-				    </div>
-				  </div>
-				</div>
+		              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
+		                Quotes
+		              </div>
+		              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right nopadding my-bottm-line dash_board_tit">
+		                <input type="text" placeholder="Search Quotes" class="form-control pull-right mng-search-bar">
+		              </div>
+		            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+			            <table class="table table-striped quotes-table">
+			              <thead>
+			              <tr>
+			                <th>Quote ID</th>
+			                <th>Request Date</th>
+			                <th>Quote Value</th>
+			                <th></th>
+			              </tr>
+			              </thead>
+			              <tbody>
+			              <tr>
+			                <td><a href="" class="invoice-no">49345</a></td>
+			                <td>May 21, 2015</td>
+			                <td>$928.96</td>
+			                <td>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			              </tr>
+			              <tr>
+			                <td><a href="" class="invoice-no">49345</a></td>
+			                <td>May 21, 2015</td>
+			                <td>$928.96</td>
+			                <td>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			              </tr>
+			              <tr>
+			                <td><a href="" class="invoice-no">49345</a></td>
+			                <td>May 21, 2015</td>
+			                <td>$928.96</td>
+			                <td>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			              </tr>
+			              <tr>
+			                <td><a href="" class="invoice-no">49345</a></td>
+			                <td>May 21, 2015</td>
+			                <td>$928.96</td>
+			                <td>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			              </tr>
+			              <tr>
+			                <td><a href="" class="invoice-no">49345</a></td>
+			                <td>May 21, 2015</td>
+			                <td>$928.96</td>
+			                <td>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			              </tr>
+			              </tbody>
+			            </table>
+		            </div>
+		    </div>
 			</div>
 		</div>
 	</article>
