--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -46,9 +46,9 @@
 							<input class="form-control" type="text" value="1">
 						</td>
 						<td class="duration vertically-middle">
-							<p>12 Dec, 2015</p>
+							<p>12 Dec, 2015 - 23:00</p>
 							<p class="to">to</p>
-							<p>14 Dec, 2015</p>
+							<p>14 Dec, 2015 - 23:00</p>
 						</td>
 						<td class="area vertically-middle">
 							<i class="fa fa-map-marker marker"></i>
@@ -85,9 +85,9 @@
 							<input class="form-control" type="text" value="1">
 						</td>
 						<td class="duration vertically-middle">
-							<p>12 Dec, 2015</p>
+							<p>12 Dec, 2015 - 23:00</p>
 							<p class="to">to</p>
-							<p>14 Dec, 2015</p>
+							<p>14 Dec, 2015 - 23:00</p>
 						</td>
 						<td class="area vertically-middle">
 							<i class="fa fa-map-marker marker"></i>
@@ -124,9 +124,9 @@
 							<input class="form-control" type="text" value="1">
 						</td>
 						<td class="duration vertically-middle">
-							<p>12 Dec, 2015</p>
+							<p>12 Dec, 2015 - 23:00</p>
 							<p class="to">to</p>
-							<p>14 Dec, 2015</p>
+							<p>14 Dec, 2015 - 23:00</p>
 						</td>
 						<td class="area vertically-middle">
 							<i class="fa fa-map-marker marker"></i>
