--- a/src/app/quotes-detail/quotes-detail.html
+++ b/src/app/quotes-detail/quotes-detail.html
@@ -68,7 +68,7 @@
 												<i class="fa fa-truck fa-4x"></i>
 											</td>
 											<td class="equipment-desc vertically-middle quotes-equip">
-												<a class="heading-text on-hover-pointer">Electric Equipment Wide-16 "</a>
+												<a class="heading-text on-hover-pointer marker">Electric Equipment Wide-16 "</a>
 												<i class="fa fa-map-marker marker"></i>
 												<span>Bay Area, Houstan</span>
 											</td>
@@ -87,7 +87,7 @@
 												<i class="fa fa-truck fa-4x"></i>
 											</td>
 											<td class="equipment-desc vertically-middle quotes-equip">
-												<a class="heading-text on-hover-pointer">Electric Equipment Wide-16 "</a>
+												<a class="heading-text on-hover-pointer marker">Electric Equipment Wide-16 "</a>
 												<i class="fa fa-map-marker marker"></i>
 												<span>Bay Area, Houstan</span>
 											</td>
@@ -106,7 +106,7 @@
 												<i class="fa fa-truck fa-4x"></i>
 											</td>
 											<td class="equipment-desc vertically-middle quotes-equip">
-												<a class="heading-text on-hover-pointer">Electric Equipment Wide-16 "</a>
+												<a class="heading-text on-hover-pointer marker">Electric Equipment Wide-16 "</a>
 												<i class="fa fa-map-marker marker"></i>
 												<span>Bay Area, Houstan</span>
 											</td>
@@ -129,7 +129,7 @@
 										<i class="fa fa-truck fa-4x"></i>
 									</div>
 									<div class="equipment-desc quotes-equip">
-										<a class="heading-text on-hover-pointer">Electric Equipment Wide-16 "</a>
+										<a class="heading-text on-hover-pointer marker">Electric Equipment Wide-16 "</a>
 										<i class="fa fa-map-marker marker"></i>
 										<span>Bay Area, Houstan</span>
 										<p class="desc-text quantity-p">Quantity: 1
@@ -142,7 +142,7 @@
 										<i class="fa fa-truck fa-4x"></i>
 									</div>
 									<div class="equipment-desc quotes-equip">
-										<a class="heading-text on-hover-pointer">Electric Equipment Wide-16 "</a>
+										<a class="heading-text on-hover-pointer marker">Electric Equipment Wide-16 "</a>
 										<i class="fa fa-map-marker marker"></i>
 										<span>Bay Area, Houstan</span>
 										<p class="desc-text quantity-p">Quantity: 1
@@ -155,7 +155,7 @@
 										<i class="fa fa-truck fa-4x"></i>
 									</div>
 									<div class="equipment-desc quotes-equip">
-										<a class="heading-text on-hover-pointer">Electric Equipment Wide-16 "</a>
+										<a class="heading-text on-hover-pointer marker">Electric Equipment Wide-16 "</a>
 										<i class="fa fa-map-marker marker"></i>
 										<span>Bay Area, Houstan</span>
 										<p class="desc-text quantity-p">Quantity: 1
