--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -42,8 +42,6 @@
         </div>
         <!-- End  Dashboard tab -->
         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-          <div class="content-wrapper1">
-            <div id="dash" class="tab-pane fade in active">
 
               <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
                 Invoices
@@ -57,7 +55,6 @@
                 <button class="btn btn-default pull-right manage-job-btn deactivate list all-btn" ng-class="{'active primary-btn' : flags.outstanding}" ng-click="toggleInvoiceView(true)">Outstanding</button>
                 <button class="btn btn-default pull-right manage-job-btn deactivate map all-btn" ng-click="toggleInvoiceView(false)" ng-class="{'active primary-btn' : !flags.outstanding}">All Invoices</button>
               </div>
-          </div>
             <!-- <section class="content-header">
               <h1>
                 Invoices
@@ -79,8 +76,8 @@
                 </div>
               </div>
             </section> -->
-            <br>
-            <table class="table table-striped" ng-if="invoices.length">
+
+            <!-- <table class="table table-striped" ng-if="invoices.length">
               <thead>
               <tr>
                 <th>Invoices</th>
@@ -105,8 +102,52 @@
                   <a href="#"><i class="fa fa-download"></i></a></td>
               </tr>
               </tbody>
-            </table>
-          </div>
+            </table> -->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="devider"></div>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding hidden-xs">
+                <table class="table table-striped quotes-table">
+                  <thead>
+                    <tr>
+                      <th>Invoices</th>
+                      <th>Job Sites</th>
+                      <th>Contract #</th>
+                      <th>Purchase Order</th>
+                      <th>Total</th>
+                      <th>Due Amount</th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="invoice in invoices">
+                      <td><a href="" class="invoice-no">{{invoice.InvoiceID}}</a></td>
+                      <td>{{invoice.Site_Name}}</td>
+                      <td>{{invoice.Source}}</td>
+                      <td>{{invoice.Purchase_Order_ID}}</td>
+                      <td>{{invoice.Total}}</td>
+                      <td>{{invoice.Balance}}</td>
+                      <td>
+                        <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
+                        <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="col-xs-12 visible-xs">
+                <div ng-repeat="invoice in invoices" class="invoices-small">
+                  <p class="bold-font desc-text">Invoice
+                    <a href="#" class="invoice-no pull-right"><span># {{invoice.InvoiceID}}</span></a>
+                  </p>
+                  <p class="bold-font desc-text">{{invoice.Site_Name}}</p>
+                  <p class="desc-text">{{invoice.Source}}</p>
+                  <p class="desc-text bold-font">Total:&nbsp {{invoice.Total}}
+                    <span class="desc-text bold-font pull-right">Due Amount{{invoice.Balance}}</span>
+                  </p>
+                  <div>
+                    <button class="btn primary-btn all-btn sign_mybtn  autowidth"><i class="fa fa-eye white-color"></i>&nbsp View</button>
+                    <button class="btn primary-btn all-btn sign_mybtn  autowidth"><i class="fa fa-download white-color"></i>&nbsp Download</button>
+                  </div>
+                </div>
+              </div>
         </div>
       </div>
     </div>
