--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -1810,6 +1810,16 @@ button:hover {
   font-weight: 600 !important;
 }
 
+.white-color {
+  color: #fff;
+}
+
+.invoices-small {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 15px;
+  margin-bottom: 10px;
+}
+
 
 
 
