--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -1820,6 +1820,18 @@ button:hover {
   margin-bottom: 10px;
 }
 
+.reserve-btns {
+  text-align: center;
+  padding: 0 10% 10px 10%;
+}
+
+.reserve-btns a i {
+  border: 1px solid #dedede;
+  margin: 0;
+  border-radius: 5px;
+  padding: 6px;
+}
+
 
 
 
