grid stars rating alignment

--- a/src/app/search/grid.html
+++ b/src/app/search/grid.html
@@ -6,17 +6,23 @@
     <div class="certified_box">
       <img src="assets/images/certified.png">
       <br>
-      <div class="star_rate">
+      <!-- <div class="star_rate">
         <a href="#"> <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
           <i class="fa fa-star-half-o"></i>
           <i class="fa fa-star-o"></i></a>
       </div>
-    </div>
+ -->    </div>
 
     <h4 class="lift_box_tit"><a ng-href="/#/equipments{{item.id}}">{{item.Product_Name}}</a></h4>
-    <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">{{item.MAKE}}</a></span></h5>
+    <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">{{item.MAKE}}</a></span>
+      <a href="#" class="pull-right rating-stars"> <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star-half-o"></i>
+          <i class="fa fa-star-o"></i></a>
+    </h5>
     <div class="daily_ul">
       <ul>
         <li>
