--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -67,8 +67,61 @@
               </div>
               <!-- map view end -->
               <!-- list view start -->
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="flags.listView">
-                <ul class="list-view-ul">
+              <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> -->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-if="flags.listView">
+                  <table class="table quotes-table">
+                    <thead>
+                      <tr>
+                        <th>Site ID</th>
+                        <th>Site Name</th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td><a href="" class="invoice-no">49345</a></td>
+                        <td>Job 1</td>
+                        <td class="text-right">
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="" class="invoice-no">49345</a></td>
+                        <td>Job 2</td>
+                        <td class="text-right">
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="" class="invoice-no">49345</a></td>
+                        <td>Job 3</td>
+                        <td class="text-right">
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="" class="invoice-no">49345</a></td>
+                        <td>Job 4</td>
+                        <td class="text-right">
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="" class="invoice-no">49345</a></td>
+                        <td>Job 5</td>
+                        <td class="text-right">
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+                          <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!-- <ul class="list-view-ul">
                   <li class="list-view-li"><h4>1</h4></li>
                   <li class="list-desc">
                     <h4>Hello world</h4>
@@ -137,8 +190,8 @@
                   </li>
                   <li class="list-view-li list-view-desc"><h4>Hello</h4></li>
                   <li class="list-view-li list-view-desc"><h4>World</h4></li>
-                </ul>
-              </div>
+                </ul> -->
+              <!-- </div> -->
               <!-- list view end -->
             </div>
           </div>
