--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -75,13 +75,13 @@
             <img src="assets/images/calendar.png" class="pull-right">
           </div>
         </div>
-        <div class="col-md-6 col2 col3">
+        <div class="col-md-6 col2 col3 toppadding">
           <p>Email</p>
-          <div class="form-control form-left your-need">
+          <div class="form-control form-left your-need email-form">
             <input type="text" placeholder="Enter a valid email address" class="info-input">
           </div>
         </div>
-        <div class="col-md-6 col2 col3">
+        <div class="col-md-6 col2 col3 toppadding">
           <p>Phone</p>
           <div class="form-control form-left your-need">
             <input type="text" placeholder="(xxx)-xxx-xxxxx)" class="info-input">
