--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -54,11 +54,12 @@
 							</div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="devider"></div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
-								<table class="table table-striped quotes-table">
+								<table class="table quotes-table">
 									<thead>
 										<tr>
 											<th>Quote ID</th>
 			                <th>Request Date</th>
+			                <th>Job Site</th>
 			                <th>Quote Value</th>
 			                <th></th>
 			              </tr>
@@ -67,42 +68,47 @@
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
+			                <td></td>
 			                <td>$928.96</td>
-			                <td>
-			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
-			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			                <td class="text-right">
+			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
 			              </tr>
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
+			                <td></td>
 			                <td>$928.96</td>
-			                <td>
-			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
-			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			                <td class="text-right">
+			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
 			              </tr>
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
+			                <td></td>
 			                <td>$928.96</td>
-			                <td>
-			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
-			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			                <td class="text-right">
+			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
 			              </tr>
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
+			                <td></td>
 			                <td>$928.96</td>
-			                <td>
-			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
-			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			                <td class="text-right">
+			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
 			              </tr>
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
+			                <td></td>
 			                <td>$928.96</td>
-			                <td>
-			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no"></i></a>
-			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no"></i></a></td>
+			                <td class="text-right">
+			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
+			                  <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
 			              </tr>
 			            </tbody>
 			          </table>
