--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -220,7 +220,7 @@ a:focus { color: #0099cc;
            vertical-align: top;}
 .cart_menu ul{margin: 0; padding: 0;}
 .cart_menu ul li{display: inline;}
-.cart_menu ul li a{padding: 0 10px; line-height: 70px;}
+.cart_menu ul li a{padding: 0 22px 0 10px; line-height: 70px;}
 .cart_menu .cart_noti{background: #ff5600 none repeat scroll 0 0;
                       border-radius: 12px; 
                       /*left: 23px;*/
@@ -229,7 +229,7 @@ a:focus { color: #0099cc;
                       position: absolute;
                       text-align: center;
                       top:3px;
-                      right: 0;}
+                      right: 165px;}
 .cart_menu .noti{background: #ff5600 none repeat scroll 0 0;
                  border-radius: 12px; left: 72px;
                  color: #fff;
@@ -242,7 +242,7 @@ a:focus { color: #0099cc;
 .pro_pic{margin: 0 10px 0 0; width: 30px;}
 .my-search-nav{margin: 21px 0 0 0;}
 .drop-btn{float: right;}
-.search-head-without{width: 56% !important; height: 40px;}
+.search-head-without{width: 53% !important; height: 40px;}
 .form-group-sell{margin-bottom: 5px;}
 /*****Search_grid******/
 .filter{ color: #666666; font-size:18px; margin: 0 0 0 10px;}
@@ -1300,7 +1300,7 @@ button:hover {
 }
 
 .toppadding {
-  padding-top: 0;
+  padding-top: 0 !important;
 }
 
 .pre-collapse {
@@ -1737,18 +1737,23 @@ button:hover {
 /*quotes list*/
 
 .quotes-table thead {
-  background-color: #009ddc;
-  color: #fff;
+  background-color: transparent;
   font-weight: 600;
 }
 
-.quotes-table thead tr th,
+.quotes-table thead tr th {
+  font-size: 14px;
+  border-bottom: 1px solid #ddd;
+}
+
 .quotes-table tbody tr td {
   font-size: 13px;
+  border-top: 1px dashed #ddd;
+  border-bottom: 1px dashed #ddd;
 }
 
 .view-down {
-  margin-right: 10px;
+  margin-right: 16px;
 }
 
 .devider {
@@ -1834,6 +1839,68 @@ button:hover {
 
 .rating-stars {
   margin-right: 10px;
+}
+
+.email-form {
+  margin-bottom: 10px;
+}
+
+.user-list-group {
+  margin: -7px 0 0;
+}
+
+.user-list-group .list-group-item {
+  padding: 10px;
+  cursor: pointer;
+  font-size: 13px;
+}
+
+.user-list-group .list-group-item a:focus,
+.user-list-group .list-group-item a:hover {
+  background-color: transparent;
+}
+
+.user-list-group .list-group-item:focus,
+.user-list-group .list-group-item:hover {
+  background-color: #f5f5f5;
+  transition: all 0.6s ease 0s;
+}
+
+.bottomborder {
+  border-bottom: 0;
+}
+
+.arrow_box:after, .arrow_box:before {
+  bottom: 100%;
+  left: 62%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.arrow_box:after {
+  border-color: rgba(136, 183, 213, 0);
+  border-bottom-color: #fff;
+  border-width: 9px;
+  margin-left: -30px;
+}
+.arrow_box:before {
+  border-color: rgba(0, 0, 0, 0);
+  border-bottom-color: rgba(0, 0, 0, .25);
+  border-width: 10px;
+  margin-left: -31px;
+}
+
+.about-dropdown {
+  left: -30px;
+  margin: 2px 0 0;
+}
+
+.text-right {
+  text-align: right;
 }
 
 
