--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -220,16 +220,19 @@ a:focus { color: #0099cc;
            vertical-align: top;}
 .cart_menu ul{margin: 0; padding: 0;}
 .cart_menu ul li{display: inline;}
-.cart_menu ul li a{padding: 0 22px 0 10px; line-height: 70px;}
+.cart_menu ul li a{padding: 5px; line-height: 56px;}
 .cart_menu .cart_noti{background: #ff5600 none repeat scroll 0 0;
-                      border-radius: 12px; 
+                      border-radius: 50px;
+                      height: 20px;
+                      width: 20px;
+                      font-size: 10px;
                       /*left: 23px;*/
                       color: #fff;
-                      padding: 1px 7px;
+                      padding: 2px 5px;
                       position: absolute;
                       text-align: center;
-                      top:3px;
-                      right: 165px;}
+                      top:6px;
+                      right: 147px;}
 .cart_menu .noti{background: #ff5600 none repeat scroll 0 0;
                  border-radius: 12px; left: 72px;
                  color: #fff;
@@ -239,7 +242,7 @@ a:focus { color: #0099cc;
                  top:3px;}
 .fa-shopping-cart{color: #c2c2c2;}
 .fa-bell-o{color: #c2c2c2;}
-.pro_pic{margin: 0 10px 0 0; width: 30px;}
+.pro_pic{margin: 0px 5px 0px 19px; width: 22px;}
 .my-search-nav{margin: 21px 0 0 0;}
 .drop-btn{float: right;}
 .search-head-without{width: 53% !important; height: 40px;}
@@ -1024,7 +1027,7 @@ a:focus { color: #0099cc;
 }
 
 .user-div .my-alc-btn {
-  margin: 12px 0;
+  margin: 14px 0;
 }
 
 .for-small {
@@ -1589,6 +1592,7 @@ button:hover {
 
 .marker {
   color: #009ddc;
+    font-size: 21px;
 }
 
 .site-btn-div {
