minor header changes

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -101,7 +101,7 @@
         <div class="cart_menu" ng-if="userObj">
           <ul>
             <li>
-              <a href="#" class="marker">
+              <a href="/#/dashboard" class="marker">
                 <i class="fa fa-tachometer fa-2x marker"></i>
               </a>
             </li>
